# DecisionTree

./: CMakeLists.txt  README.md  decision_tree.dot  df.sqlite  main.cpp
data/: dataDesc.txt
lib/: DataSet.h  DecisionTree.h  DecisionTreeMetrics.h  TreeNode.h  Visualise.h
src/: DataSet.cpp  DecisionTree.cpp  DecisionTreeMetrics.cpp  Visualise.cpp
